k8s/core/core-service.yml
apiVersion: v1
kind: Service
metadata:
  name: core-service
spec:
  type: ClusterIP
  selector:
    component: core
    app: myappcore
  ports:
    - port: 80
      targetPort: 80
