k8s/core/core-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-ingress
spec:
  rules:
    - host: "realestate.frangiadakis.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core-service
                port:
                  number: 80
